# Mario-Project

./: .gitignore  CMakeLists.txt  Mario.cpp
inc/: SaveGame.h
inc/Block/: Block.h  BlockFactory.h  CloudBlock.h  ExclamationBlock.h  EyesClosedBlock.h  EyesOpenedBlock.h  GlassBlock.h  InvisibleBlock.h  MessageBlock.h  QuestionBlock.h  QuestionFireFlowerBlock.h  QuestionMushroomBlock.h  QuestionOneUpMushroomBlock.h  QuestionStarBlock.h  QuestionThreeUpMoonBlock.h  StoneBlock.h  WoodBlock.h
inc/Character/: Character.h  CharacterFactory.h  CharacterName.h  CharacterTag.h  CharacterType.h  Fireball.h  Luigi.h  Mario.h  Peach.h  Toad.h
inc/Common/: CollisionBox.h  CollisionType.h  Direction.h  Drawable.h  GameState.h  HitType.h  ResourceManager.h  Sprite.h  SpriteState.h
inc/Enemy/: BanzaiBill.h  BlueKoopaTroopa.h  BobOmb.h  BulletBill.h  BuzzyBeetle.h  BuzzyBettle.h  Enemy.h  EnemyFactory.h  FlyingGoomba.h  Goomba.h  GreenKoopaTroopa.h  JumpingPiranhaPlant.h  MontyMole.h  MummyBeetle.h  Muncher.h  PiranhaPlant.h  RedKoopaTroopa.h  Rex.h  Swooper.h  YellowKoopaTroopa.h
inc/GUI/: Button.h  CharacterTag.h  GameHud.h  Slider.h
inc/Game/: GameHud.h  GameLoop.h  Map.h  ModeWorld.h  World.h
inc/GameState/: ChooseCharacterState.h  CountingPointState.h  FinishedState.h  GameOverState.h  GameState.h  GameStateType.h  GoNextMapState.h  IrisOutState.h  PlayingState.h  SettingState.h  TimeUpState.h  TitleScreenState.h
inc/Item/: Coin.h  CourseClearToken.h  FireFlower.h  Item.h  Star.h  (+5 more)
resources/: MarioProject.tsx  SaveGame.json  untitled.tmx
src/: SaveGame.cpp  main.cpp
(+88 files in other folders)
